force-app/main/default/objects/RSI_Claim__c/RSI_Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>