force-app/main/default/objects/RSI_Claim__c/fields/CAIP_merge_Field__c.field-meta.xml
<CustomField>
    <fullName>CAIP_merge_Field__c</fullName>
    <formula>Name  &amp; &quot; | &quot; &amp;  TEXT(RSI_Policy__r.RSI_Policy_Type__c)    &amp; &quot; | &quot; &amp; &quot;Raised on &quot; &amp; TEXT(RSI_Initiation_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for CAIP API</inlineHelpText>
    <label>CAIP merge Field</label>
    <type>Text</type>
</CustomField>