force-app/main/default/objects/RSI_Claim__c/fields/RSI_Customer__c.field-meta.xml
<CustomField>
    <fullName>RSI_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>