force-app/main/default/objects/RSI_Claim__c/fields/RSI_Finalized_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Finalized_Date__c</fullName>
    <label>Finalized Date</label>
    <type>Date</type>
</CustomField>