force-app/main/default/objects/RSI_Claim__c/fields/RSI_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Initiation_Date__c</fullName>
    <label>Initiation Date</label>
    <type>Date</type>
</CustomField>