force-app/main/default/objects/RSI_Claim__c/fields/RSI_My_Claims__c.field-meta.xml
<CustomField>
    <fullName>RSI_My_Claims__c</fullName>
    <formula>OwnerId =  $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Claims</label>
    <type>Checkbox</type>
</CustomField>