force-app/main/default/objects/RSI_Claim__c/fields/RSI_Policy__c.field-meta.xml
<CustomField>
    <fullName>RSI_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>RSI_Insurance_Policy__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>