force-app/main/default/objects/RSI_Claim__c/fields/RSI_Status__c.field-meta.xml
<CustomField>
    <fullName>RSI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>