force-app/main/default/objects/RSI_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RSI_Policy__c</columns>
    <columns>RSI_Status__c</columns>
    <columns>RSI_Initiation_Date__c</columns>
    <columns>RSI_Finalized_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>RS_Sharing_Setting_Agent_Group_1</group>
    </sharedTo>
</ListView>