force-app/main/default/objects/RSI_Claim__c/listViews/My_Claims.listView-meta.xml
<ListView>
    <fullName>My_Claims</fullName>
    <columns>NAME</columns>
    <columns>RSI_Policy__c</columns>
    <columns>RSI_Status__c</columns>
    <columns>RSI_Initiation_Date__c</columns>
    <columns>RSI_Finalized_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Claims</label>
</ListView>